--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de cadastro Produtos</title>
-    <link rel="stylesheet" href="./styles/output.css">
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body class="bg-gray 100 text-gray-900"> 
     <div>
@@ -15,5 +15,6 @@
 
     </p>
     </div>
+    <script src="scripts/main.js"></script>
 </body>
 </html> 
