--- a/src/loguin.html
+++ b/src/loguin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loguin</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-</head>
+</head>'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
 <body class="bg-grey-100 flex intems-center justify-center h-screen">
     <div class="bg-white p-6 rouded shadow-md w-96">
         <h2 class="text-center text-2xl font-bold md-4">Faça Login no Sistema</h2>
@@ -14,18 +14,18 @@
         <!-- Formulario de Loguin -->
          <form action="">
             <div class="md-4">
-                <label for="">E-mail</label>
-                <input type="email" placeholder="Digite seu e-mail"
+                <label for="" class="block text-gray-700">E-mail</label>
+                <input type="email" classe="w-full p-2 boder rounded" placeholder="Digite seu e-mail"
             </div><!-- Div e-mail -->
 
 
             <div class="md-4">
-                <label for="">Senha</label>
-                <input type="password" placeholder="Digite sua senha:"
+                <label for="" class="block text-gray-700">Senha</label>
+                <input type="password" classe="w-full p-2 boder rounded"placeholder="Digite sua senha:"
             </div><!-- Div senha -->
-        </form>
         
- <button>entrar</button>
+        
+ <button> type="subimit" class"w-full bg-blue-500 text-white p-2 rouded"</button>
 
          </form>
     </div><!-- Div principal -->
